--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 01.02.2022 08:09:51</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 01.02.2022 08:33:28</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,21 +7,21 @@
 <h5>Úterý, 01. 02. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Cibulová</strong>
+<strong>Frankfurtská</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Znojemská Vepřová plec s rýží</strong>
+<strong>Mexický Vepřový guláš s rýží NEBO houskovým knedlíkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
 						</span>
 </p>
 <p>
-<strong>Sekaná s vejcem s vařeným bramborem a hořčicí</strong>
+<strong>Smažené žampiony s vařeným bramborem a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							133,-
@@ -131,7 +131,7 @@ drcenými rajčaty a chorizo klobásou 1a,9</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s citronem a omackou z pecenych paprik, teply cizrnovy salat se zeleninou a beluga cockou 139</li><li>Peceny filet z cerstve prazmy kralovske s citronem a omackou z pecenych paprik, teply cizrnovy salat se zeleninou a beluga cockou 175</li><li>Pomalu pecene indoneske veprove s arasidovou omackou, jasminova ryze, salatek 139</li><li>Grilovana koroptvi prsicka s thajskym chilli dzemem, pecene brambory, pomerancovy salat s cervenou cibuli 169</li><li>Pecene papriky plnene fazolovym chilli, korenena ryze s beluga cockou, jogurtovy dip, salatek 139</li></ol>
+<ol><li>Peceny filet z norskeho slede se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvymi bylinkami, zeleninou a klicky 139</li><li>Gravlax z divokeho lososa nerka se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvymi bylinkami, zeleninou a klicky 169</li><li>Malajsky hovezi rendang s kokosovym mlekem, vonavym korenim a tamarindem, jasminova ryze, salatek 139</li><li>Smazeny sekany teleci rizek s goudou, stouchane brambory se smazenou cibulkou, nase kysane zeli s mrkvi {L} 169</li><li>Arabsky cizrnovy hummus s olivovym olejem, sekane varene vajicko se zaatarem, arabske placky, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
