--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 01.02.2022 08:33:28</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 01.02.2022 09:12:23</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -52,7 +52,52 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Úterý 1.2.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Brownie bez lepku</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Maková bábovka s kokosem bez lepku </div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s tvarohem a mákem</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Míša dort bez lepku </div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Uzený vývar s kroupami a vajíčkem samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Uzený vývar s kroupami a vajíčkem v menu <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Kuřecí roláda plněná houbovým ragú, zauzená bramborová kaše, polníček <em title="Mléko">7</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Hamburská vepřová pečeně, houskový knedlík, pražená slanina, nakládané okurky <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Stir fry rýže se zeleninou, vajíčko, koriandr, slunečnicové semínko  <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -131,7 +176,7 @@ drcenými rajčaty a chorizo klobásou 1a,9</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z norskeho slede se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvymi bylinkami, zeleninou a klicky 139</li><li>Gravlax z divokeho lososa nerka se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvymi bylinkami, zeleninou a klicky 169</li><li>Malajsky hovezi rendang s kokosovym mlekem, vonavym korenim a tamarindem, jasminova ryze, salatek 139</li><li>Smazeny sekany teleci rizek s goudou, stouchane brambory se smazenou cibulkou, nase kysane zeli s mrkvi {L} 169</li><li>Arabsky cizrnovy hummus s olivovym olejem, sekane varene vajicko se zaatarem, arabske placky, salatek {L} 139</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s kaparovou vinnou omackou, pecene brambory s cervenou cibuli a ruzickovou kapustou, salatek 139</li><li>Peceny filet z cerstveho norskeho lososa s kaparovou vinnou omackou, pecene brambory s cervenou cibuli a ruzickovou kapustou, salatek 169</li><li>Burrito s restovanymi gyros nudlickami z krutich prsou, kukurici, okurkami, rajcaty a pekingskym zelim, zeleninovy bulgur, jogurtovy dip, salatek {L} 139</li><li>Rostbif z hoveziho rostence s krenovou majonezou, nastavovana kase {stouchane brambory se smazenou cibulkou a krupkami}, salatek {L} 169</li><li>Arabsky smazeny cizrnovy falafel, jogurovy dip, zeleninovy bulgur, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
